syntax = "proto3";

package calculatorpb;

option go_package = "com.grpc.calculatorpb";

message CalculatorRequest {
    int32 operand_1 = 1;
    int32 operand_2 = 2;
    string operator = 3;
}

message CalculatorResponse {
    int32 result = 1;
}

message PrimeFactorizationRequest {
    int32 number = 1;
}

message PrimeFactorizationResponse {
    int32 factor = 1;
}

service CalculatorService {
    rpc Calculator (CalculatorRequest) returns (CalculatorResponse) {};
    rpc PrimeFactorization (PrimeFactorizationRequest) returns (stream  PrimeFactorizationResponse) {};
}
